manifests/networking/gateway-api/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: ecom-gateway
  namespace: istio-system

spec:
  gatewayClassName: istio

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All
