manifests/networking/gateway-api/virtualservice.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ecom
  namespace: ecom
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/ecom-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: api-gateway
        port:
          number: 8080

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
